fix: use IS, pagination not supported here
truncate thumbs if there are more than 4
fix topic timestamp when loading next page

--- a/public/style.scss
+++ b/public/style.scss
@@ -4,3 +4,9 @@
 		margin-bottom: 1rem;
 	}
 }
+
+[component="topic/thumb/list"] {
+	&.thumbs-collapsed img:nth-of-type(n+4) {
+		display: none!important;
+	}
+}
